add batch improve lombok, add tests, use .java-version from jenv

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -20,6 +20,10 @@ spring.h2.console.path=/h2-console
 # Application Name
 spring.application.name=todo-app
 
+# Spring Batch Configuration
+spring.batch.job.enabled=false
+spring.batch.jdbc.initialize-schema=always
+
 # Swagger/OpenAPI Configuration
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
