--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -37,6 +37,10 @@
             <scope>runtime</scope>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-h2console</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
@@ -175,7 +179,7 @@
                     </excludes>
                 </configuration>
             </plugin>
-            <!-- Surefire Plugin for running tests -->
+            <!-- Surefire Plugin for running unit tests -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
