compose fix with actuator

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -22,7 +22,7 @@ spring.application.name=todo-app
 
 # Spring Batch Configuration
 spring.batch.job.enabled=false
-spring.batch.jdbc.initialize-schema=always
+#spring.batch.jdbc.initialize-schema=always
 
 # Swagger/OpenAPI Configuration
 springdoc.api-docs.path=/api-docs
